cmake_minimum_required(VERSION 3.12)

set(APP_NAME vlcfg_test)
set(APP_INC_DIR ./include)
set(APP_SRC_DIR ./src)
set(SUBMODULE_DIR ../../../submodules)
set(VLCFG_DIR ../../lib/)

# Pull in PICO SDK (must be before project)
set(PICO_SDK_PATH $ENV{PICO_SDK_PATH})
include(${PICO_SDK_PATH}/pico_sdk_init.cmake)

project(${APP_NAME} C CXX ASM)

# Initialize the SDK
pico_sdk_init()

add_executable(${APP_NAME})

target_compile_options(${APP_NAME} PUBLIC -O2 -Wall)

add_subdirectory(${VLCFG_DIR} vlcfg)
target_compile_definitions(vlcfg PUBLIC VLCFG_DEBUG)

file(GLOB CPP_FILES
    ${APP_SRC_DIR}/*.cpp
    ${APP_SRC_DIR}/*.c
)

target_sources(${APP_NAME} PRIVATE 
    ${CPP_FILES}
)

target_include_directories(${APP_NAME} PRIVATE
    ${APP_INC_DIR}
    ${VLCFG_DIR}/include
)

target_link_libraries(${APP_NAME} PRIVATE
    pico_stdlib
    pico_multicore
    pico_cyw43_arch_lwip_threadsafe_background
#    pico_lwip_http
#    pico_lwip_mdns
#    pico_httpd_content
#    hardware_spi
#    hardware_flash
#    hardware_sync
    hardware_adc
    hardware_i2c
    hardware_clocks
    vlcfg
)

pico_enable_stdio_usb(${APP_NAME} 1)
pico_enable_stdio_uart(${APP_NAME} 0)

pico_add_extra_outputs(${APP_NAME})
